...
    }
    // Setup the layout of navigation bar
    fileprivate func setupNavigation() {
        navigationController?.navigationBar.isTranslucent = false
        navigationController?.navigationBar.tintColor = .black
        
        navigationItem.title = "Me"
        navigationItem.backBarButtonItem = UIBarButtonItem(title: "", style: .plain, target: nil, action: nil)
        navigationItem.leftBarButtonItem = UIBarButtonItem(image: UIImage(named: "icons8-QR Code Filled-50"), style: .plain, target: self, action: #selector(handleQRCode))
        navigationItem.rightBarButtonItem = UIBarButtonItem(image: UIImage(named: "icons8-More Filled-50"), style: .plain, target: self, action: #selector(handleOptions))
    }
    // When QRcode button has been touched
    @objc fileprivate func handleQRCode() {
...
        vc.delegate = self
        navigationController?.pushViewController(vc, animated: true)
    }
    
    // When signout button has been touched
    func handleSignOut(completion: (() -> Void)?) {
        let alert = UIAlertController(title: "Warning", message: "Are you sure want to sign out?", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Yes", style: .default, handler: { (action) in
            do {
                try Auth.auth().signOut()
                if let completion = completion { completion() }
                self.present(LoginViewController.sharedInstance, animated: true, completion: nil)
            } catch let logoutError {
                let alert = UIAlertController(title: "Error", message: String(describing: logoutError), preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
                self.present(alert, animated: true, completion: nil)
            }
        }))
        alert.addAction(UIAlertAction(title: "No", style: .cancel, handler: nil))
        present(alert, animated: true, completion: nil)
    }
...
