...
}
// Options when editing profile (edit or logout)
class OptionsTableViewController: UITableViewController {

    var delegate: OptionsViewControllerDelegate?
    
    var settingOptions = [["Edit Profile"], ["Log Out"]]
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        setupNavigation()
        setupTableView()
...
