...
        let homeVC = HomeViewController(collectionViewLayout: UICollectionViewFlowLayout())
        // homeVC is one of the delegates for loginVC. It performs reloading data on itself
        loginVC.delegates?.append(homeVC)
        // homeVC has a navigation
        let homeNC = UINavigationController(rootViewController: homeVC)
        // tabBarItem is accessible from homeNC because homeNC is created in UITabBarController
        homeNC.tabBarItem.title = "Home"
        homeNC.tabBarItem.image = UIImage(named: "icons8-Home")
        homeNC.tabBarItem.selectedImage = UIImage(named: "icons8-Home Filled")
        
        // Chats
        let chatsVC = ChatsViewController(style: .plain)
	    loginVC.delegates?.append(chatsVC)
...
